Fix home grid overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600');
 
-html, body {
-  margin: 0;
-}
-
 p {
   margin: 0;
 }
@@ -32,7 +28,6 @@ a:hover, a:active {
 
 .App {
   min-height: 100%;
-  display: grid;
   background: #101214 url(images/binding_dark.png);
   font-family: 'Open Sans', sans-serif;
   color: #EFEFEF;
